# reSJTUBBS

./: .envrc  .gitignore  .gitmodules  Makefile  README.md  config.yml.template  docker-compose.yml  filter.py  go.mod  go.sum  pyproject.toml  reconstructor.py  reimporter.py  retriever.go
cmd/post/: main.go
cmd/reid/: main.go
db/: .gitignore
pkg/client/: client.go
pkg/models/: post.go  reid.go
pkg/storage/: board.go  mongo.go  post.go  redis.go  reid.go
pkg/utils/: config.go  progressbar.go  set.go  urlbuilder.go
pkg/worker/: board.go  common.go  post.go  reid.go
poi/: SJTUNews.txt
pypkg/: config.py  organize.py  parser.py
pypkg/models/: mongo.py  postgres.py
scripts/: build_deps.sh  docker-volume-export
