[project]
name = "resjtubbs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "click>=8.3.0",
    "markdownify>=1.2.0",
    "psycopg2-binary>=2.9.11",
    "pymongo>=4.15.3",
    "pyyaml>=6.0.3",
    "redis>=6.4.0",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.2",
    "sqlalchemy>=2.0.44",
    "tqdm>=4.67.1",
]
